// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Message renders RTL styling 1`] = `
<div
  className="c-txt__message is-rtl "
  data-garden-id="textfields.message"
  data-garden-version="version"
  role="alert"
/>
`;

exports[`Message renders default styling 1`] = `
<div
  className="c-txt__message "
  data-garden-id="textfields.message"
  data-garden-version="version"
  role="alert"
/>
`;

exports[`Message validation renders error styling if provided 1`] = `
<div
  className="c-txt__message c-txt__message--error "
  data-garden-id="textfields.message"
  data-garden-version="version"
  role="alert"
/>
`;

exports[`Message validation renders none styling if provided 1`] = `
<div
  className="c-txt__message "
  data-garden-id="textfields.message"
  data-garden-version="version"
  role="alert"
/>
`;

exports[`Message validation renders success styling if provided 1`] = `
<div
  className="c-txt__message c-txt__message--success "
  data-garden-id="textfields.message"
  data-garden-version="version"
  role="alert"
/>
`;

exports[`Message validation renders warning styling if provided 1`] = `
<div
  className="c-txt__message c-txt__message--warning "
  data-garden-id="textfields.message"
  data-garden-version="version"
  role="alert"
/>
`;
